# sentinel

./: .gitignore  Dockerfile  README.md  TESTING_GUIDE.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_docker.txt  requirements_web.txt
monitoring/: docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml  start.sh  stop.sh  test.sh
monitoring/demo-app/: Dockerfile  app.py  requirements.txt
sentinel/: __init__.py  config.py  types.py
sentinel/agents/: __init__.py  base.py  executor.py  investigation.py  planner.py  triage.py
sentinel/eval/: __init__.py  episode.py  evaluator.py
sentinel/ingestion/: __init__.py  normalizers.py
sentinel/llm/: __init__.py  base.py  local_model.py  mock.py  openai_compat.py
sentinel/observability/: __init__.py  tracer.py
sentinel/orchestration/: __init__.py  graph.py  orchestrator.py  policies.py  verifier.py
sentinel/tools/: __init__.py  mock_tools.py  real_tools.py  registry.py
tests/: test_e2e_write_ops.py
tests/Test_tools/: test_docker_compose_ops.py
tests/llm/: test_local_llm.py
tests/orchestration/: demo_orchestration.py
web_ui/: app.py
web_ui/backend/: __init__.py  runner.py
web_ui/components/: __init__.py  action_card.py  evidence_card.py  metrics_chart.py  workflow_viz.py
web_ui/pages/: 1_🆕_新建诊断.py  2_📊_实时监控.py
web_ui/utils/: __init__.py  data_loader.py
