[project]
name = "sentinel"
version = "0.1.0"
description = "Industrial DataCenter Operations LLM Agent System"
authors = [
    {name = "Platform Engineering Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "torch",
    "transformers",
    "peft",
    "accelerate",
]

[project.optional-dependencies]
api = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentinel"]

[tool.setuptools.package-data]
sentinel = ["**/*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
